# Cosmic-Terminal-A-Cross-Language-Coding-Adventure

./: README.md  ar_coding_interface.py  blockchain_rewards.py  vr_interface.py
Game/: 1. game_engine.h  CMakeLists.txt  ai_mentor.py  bci_interface.py  code_style_cloning.py  config_loader.cpp  cosmic_terminal_ultimate.py  cybersecurity_challenges.py  game_engine.cpp  github_integration.py  mod_system.py  multiplayer_server.py  neural_challenge_generator.py  procedural_generator.py  quantum_computing.py  quest_system.py  replay_system.py  score_system.cpp  skill_system.cpp  space_economy.py  starmap_navigation.cpp  terminal_ui.cpp  voice_coding_assistant.py
Game/challenges/: cpp_challenges.py  javascript_challenges.py  python_challenges.py
Game/web/: editor.js  wasm_loader.js
